resources/assets/sass/custom/_fixes.scss
// Bootstrap 4 Fixes
.custom-control-label {
  cursor: pointer;
}

// Remove buplicate border from list groups inside cards
.card .list-group-item:last-of-type {
  border: 0;
}

// Style fix for the navbar logo
.navbar-dark {

  .svg {
    margin-top: -7px;
    max-height: 28px;
    max-width: 91px;
  }

  .svg-path {
    fill: $white;
  }

  .svg-stroke {
    stroke: $white;
  }
}

[disabled] {
  cursor: not-allowed;
}

// Generate a small pagination on mobile devices to prevent overflow
.pagination {
  @include media-breakpoint-only(xs) {
    @include pagination-size($pagination-padding-y-sm, $pagination-padding-x-sm, $font-size-sm, $line-height-sm, $border-radius-sm);
  }
}

